prep for pydna 2.0.0

--- a/Mumberg/mumberg_32_vectors.ipynb
+++ b/Mumberg/mumberg_32_vectors.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Mumberg 32 expression vectors\n",
     "\n",
@@ -115,24 +118,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")\n",
+    "from pydna.all import *\n",
+    "gb =Genbank(\"bjornjobb@gmail.com\")\n",
     "\n",
     "# The DNA fragments below were obtained from Saccharomyces Genome Database\n",
     "# www.sgd.org\n",
     "\n",
     "\n",
-    "cyc1term = pydna.Dseqrecord(\"ctcgagtcatgtaattagttatgtcacgcttacattcacgccctccccccacat\"\n",
+    "cyc1term =Dseqrecord(\"ctcgagtcatgtaattagttatgtcacgcttacattcacgccctccccccacat\"\n",
     "                            \"ccgctctaaccgaaaaggaaggagttagacaacctgaagtctaggtccctattt\"\n",
     "                            \"atttttttatagttatgttagtattaagaacgttatttatatttcaaatttttc\"\n",
     "                            \"ttttttttctgtacagacgcgtgtacgcatgtaacattatactgaaaaccttgc\"\n",
     "                            \"ttgagaaggttttgggacgctcgaaggctttaatttgcggccggtaccn\")\n",
     "\n",
-    "tefprom = pydna.Dseqrecord(\"gagctcatagcttcaaaatgtttctactccttttttactcttccagattttctcgga\"\n",
+    "tefprom =Dseqrecord(\"gagctcatagcttcaaaatgtttctactccttttttactcttccagattttctcgga\"\n",
     "                           \"ctccgcgcatcgccgtaccacttcaaaacacccaagcacagcatactaaatttcccc\"\n",
     "                           \"tctttcttcctctagggtgtcgttaattacccgtactaaaggtttggaaaagaaaaa\"\n",
     "                           \"agagaccgcctcgtttctttttcttcgtcgaaaaaggcaataaaaatttttatcacg\"\n",
@@ -141,14 +146,14 @@
     "                           \"ttctattacaactttttttacttcttgctcattagaaagaaagcatagcaatctaat\"\n",
     "                           \"ctaagttttctaga\")\n",
     "\n",
-    "cycprom = pydna.Dseqrecord(\"gagctcatttggcgagcgttggttggtggatcaagcccacgcgtaggcaatcctcga\"\n",
+    "cycprom =Dseqrecord(\"gagctcatttggcgagcgttggttggtggatcaagcccacgcgtaggcaatcctcga\"\n",
     "                           \"gcagatccgccaggcgtgtatatatagcgtggatggccaggcaactttagtgctgac\"\n",
     "                           \"acatacaggcatatatatatgtgtgcgacgacacatgatcatatggcatgcatgtgc\"\n",
     "                           \"tctgtatgtatataaaactcttgttttcttcttttctctaaatattctttccttata\"\n",
     "                           \"cattaggacctttgcagcataaattactatacttctatagacacgcaaacacaaata\"\n",
     "                           \"cacacactaatctaga\")\n",
     "\n",
-    "adhprom = pydna.Dseqrecord(\"gagctcTAAAACAAGAAGAGGGTTGACTACATCACGATGAGGGGGATCGAAGAAATG\"\n",
+    "adhprom =Dseqrecord(\"gagctcTAAAACAAGAAGAGGGTTGACTACATCACGATGAGGGGGATCGAAGAAATG\"\n",
     "                           \"ATGGTAAATGAAATAGGAAATCAAGGAGCATGAAGGCAAAAGACAAATATAAGGGTC\"\n",
     "                           \"GAACGAAAAATAAAGTGAAAAGTGTTGATATGATGTATTTGGCTTTGCGGCGCCGAA\"\n",
     "                           \"AAAACGAGTTTACGCAATTGCACAATCATGCTGACTCTGTGGCGGACCCGCGCTCTT\"\n",
@@ -176,7 +181,7 @@
     "                           \"CTCGTTCCCTTTCTTCCTTGTTTCTTTTTCTGCACAATATTTCAAGCTATACCAAGC\"\n",
     "                           \"ATACAATCAACTATCTCATATACAtctaga\")\n",
     "\n",
-    "gpdprom = pydna.Dseqrecord(\"gagctcagtttatcattatcaatactcgccatttcaaagaatacgtaaataattaat\"\n",
+    "gpdprom =Dseqrecord(\"gagctcagtttatcattatcaatactcgccatttcaaagaatacgtaaataattaat\"\n",
     "                           \"agtagtgattttcctaactttatttagtcaaaaaattagccttttaattctgctgta\"\n",
     "                           \"acccgtacatgcccaaaatagggggcgggttacacagaatatataacatcgtaggtg\"\n",
     "                           \"tctgggtgaacagtttattcctggcatccactaaatataatggagcccgctttttaa\"\n",
@@ -194,7 +199,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -217,7 +224,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -242,7 +251,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -295,7 +306,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -315,7 +328,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -588,7 +603,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "##DOWNLOAD\n",
     "\n",
@@ -629,7 +647,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -645,7 +665,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -660,10 +682,10 @@
     "# verify that the sequences made here and the ones \n",
     "# available from genbank are equivalent\n",
     "\n",
-    "assert pydna.eq(p416GPD_genbank, p416GPD)\n",
-    "assert pydna.eq(p416TEF_genbank, p416TEF)\n",
-    "assert pydna.eq(p416CYC_genbank, p416CYC)\n",
-    "assert pydna.eq(p426GPD_genbank, p426GPD)\n",
+    "assert eq(p416GPD_genbank, p416GPD)\n",
+    "assert eq(p416TEF_genbank, p416TEF)\n",
+    "assert eq(p416CYC_genbank, p416CYC)\n",
+    "assert eq(p426GPD_genbank, p426GPD)\n",
     "\n",
     "print(\"done!\")"
    ]
