--- a/p426TDH3_HIS3.ipynb
+++ b/p426TDH3_HIS3.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "p426TDH3 = pydna.read(\"./Mumberg/p426GPD.gb\")"
+    "p426TDH3 =read(\"./Mumberg/p426GPD.gb\")"
    ]
   },
   {
@@ -62,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa_A_HIS3 = pydna.read(\"pYPKa_A_ScHIS3.gb\")"
+    "pYPKa_A_HIS3 =read(\"pYPKa_A_ScHIS3.gb\")"
    ]
   },
   {
@@ -73,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "f, r = pydna.parse('''\n",
+    "f, r =parse('''\n",
     ">HIS3_mum_fwd \n",
     "TCTAGAACTAGTGGATCCCCCGGGCTGCAGGAAAATGACAGAGCAGAAAGCC\n",
     ">HIS3_mum_rev \n",
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "HIS3_prod = pydna.pcr(f,r, pYPKa_A_HIS3)"
+    "HIS3_prod =pcr(f,r, pYPKa_A_HIS3)"
    ]
   },
   {
@@ -111,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((p426TDH3_lin, HIS3_prod))"
+    "asm =Assembly((p426TDH3_lin, HIS3_prod))"
    ]
   },
   {
