--- a/pMEC1030.ipynb
+++ b/pMEC1030.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Construction of the pMEC1030 vector\n",
     "\n",
@@ -15,7 +18,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -41,16 +46,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The insert comes from a Genbank [record](http://www.ncbi.nlm.nih.gov/nuccore/84570488).\n",
     "Access to Genbank is needed in order to download the template.\n",
@@ -62,18 +72,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")"
+    "gb =Genbank(\"bjornjobbb@gmail.com\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -82,7 +96,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The first feature is removed for practical reasons since it covers the whole sequence."
    ]
@@ -91,7 +108,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -100,7 +119,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "pSU0 is a circular DNA molecule with 4398 bp. The cseguid checksum should be ```fzXVMVR4-lIsvU_eXXMG10U18s4```."
    ]
@@ -109,7 +131,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -131,7 +155,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -156,7 +182,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -165,7 +193,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The pSU0 has one EcoRV site which we would like to remove, since the Yeast Pathway Kit relies on unique [EcoRV](http://rebase.neb.com/rebase/enz/EcoRV.html), [AjiI](http://rebase.neb.com/rebase/enz/AjiI.html) and [ZraI](http://rebase.neb.com/rebase/enz/ZraI.html) sites. One linear fragment is formed when digested by EcoRV:"
    ]
@@ -174,7 +205,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -194,7 +227,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Two primers were designed for the specific removal of EcoRV through PCR amplification and susequent yeast transformation of the linear PCR product. The PCR product has two 50 bp intramolecular repeats at both ends of the molcule which are repaired into a circular molecule with the same size as the original vector.  "
    ]
@@ -203,11 +239,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "primers = pydna.parse('''\n",
+    "primers =parse('''\n",
     ">470_pSU0f-dEcoRV (50-mer)\n",
     "gtttactaaaaacacatgtggatattttgactgatttttccatggagggc\n",
     "\n",
@@ -219,16 +257,21 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "pSU0_EcoRV = pydna.pcr(primers, pSU0)"
+    "pSU0_EcoRV =pcr(primers, pSU0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The figure below show the location of the primers on the circular template."
    ]
@@ -237,7 +280,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -262,7 +307,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The DNA is processed in vivo to produce 5' cohesive ends."
    ]
@@ -271,16 +319,22 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "pSU0_EcoRV_proc = pydna.Dseqrecord(pydna.Dseq(pSU0_EcoRV.seq.watson[50:], pSU0_EcoRV.seq.crick[50:]))"
+    "from pydna.dseq import Dseq\n",
+    "pSU0_EcoRV_proc =Dseqrecord(Dseq(pSU0_EcoRV.seq.watson[50:], pSU0_EcoRV.seq.crick[50:]))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The figure below shows the cohesive ends."
    ]
@@ -289,7 +343,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -311,7 +367,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The plasmid is cirularized _in-vivo_ after transformation to yeast."
    ]
@@ -320,7 +379,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -329,7 +390,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The pMEC1030 has no EcoRV site as expected."
    ]
@@ -338,7 +402,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -360,7 +426,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -371,7 +439,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -393,7 +463,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -405,7 +477,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -416,7 +490,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -437,7 +513,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -452,8 +530,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pMEC1030.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded =read(\"pMEC1030.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   }
