--- a/pMEC1042.ipynb
+++ b/pMEC1042.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -38,7 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")"
+    "gb =Genbank(\"bjornjobb@gmail.com\")"
    ]
   },
   {
@@ -106,7 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "CEN6ARSH_fwd, CEN6ARSH_rev = pydna.parse('''\n",
+    "CEN6ARSH_fwd, CEN6ARSH_rev =parse('''\n",
     ">476_CEN6ARSHf (58-mer)\n",
     "TTTAATTTAAAAGGATCTAGGTGAAGATCCTTTTTGATAAacggatcgcttgcctgta\n",
     "\n",
@@ -122,7 +122,7 @@
    },
    "outputs": [],
    "source": [
-    "cen = pydna.pcr(CEN6ARSH_fwd, CEN6ARSH_rev, p416TEF)"
+    "cen =pcr(CEN6ARSH_fwd, CEN6ARSH_rev, p416TEF)"
    ]
   },
   {
@@ -133,7 +133,7 @@
    },
    "outputs": [],
    "source": [
-    "bleMX4_fwd, bleMX4_rev = pydna.parse('''\n",
+    "bleMX4_fwd, bleMX4_rev =parse('''\n",
     ">478_bleMX4f\n",
     "aatttaaattataattatttttatagcacgtgatgaaaaggtccccgccgggtc\n",
     "\n",
@@ -149,7 +149,7 @@
    },
    "outputs": [],
    "source": [
-    "ble = pydna.pcr(bleMX4_fwd, bleMX4_rev, pUG66)\n",
+    "ble =pcr(bleMX4_fwd, bleMX4_rev, pUG66)\n",
     "\n",
     "pSU0_EcoRV = pSU0.linearize(EcoRV)"
    ]
@@ -169,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "a=pydna.Assembly((pSU0_EcoRV, cen, ble))\n",
+    "a=Assembly((pSU0_EcoRV, cen, ble))\n",
     "\n",
     "pMEC1042 = a.circular_products[0]"
    ]
@@ -254,8 +254,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pMEC1042.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pMEC1042.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   },
