--- a/pMEC1135.ipynb
+++ b/pMEC1135.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -112,22 +112,22 @@
    },
    "outputs": [],
    "source": [
-    "p417,p626 = pydna.parse('''   >417_ScTEF1tpf (30-mer)\n",
+    "p417,p626 =parse('''   >417_ScTEF1tpf (30-mer)\n",
     "                              TTAAATAACAATGCATACTTTGTACGTTCA\n",
     "                              >626_ScTEF1tpr_PacI (35-mer)\n",
     "                              taattaaTTTGTAATTAAAACTTAGATTAGATTGC''', ds=False)\n",
     "\n",
-    "p415,p623 = pydna.parse('''   >415_ScTDH3tpf (29-mer)\n",
+    "p415,p623 =parse('''   >415_ScTDH3tpf (29-mer)\n",
     "                              TTAAATAATAAAAAACACGCTTTTTCAGT                                            \n",
     "                              >623_ScTDH3tpr_PacI (33-mer)\n",
     "                              taattaaTTTGTTTGTTTATGTGTGTTTATTCG''', ds=False)\n",
     "\n",
-    "p549,p622 = pydna.parse('''   >549_ScPGI1tpf (27-mer)\n",
+    "p549,p622 =parse('''   >549_ScPGI1tpf (27-mer)\n",
     "                              ttaaatAATTCAGTTTTCTGACTGAGT                                            \n",
     "                              >622_ScPGI1tpr_PacI (28-mer)\n",
     "                              taattaaTTTTAGGCTGGTATCTTGATT''', ds=False)\n",
     "\n",
-    "p409,p624 = pydna.parse('''   >409_ScFBA1tpf (37-mer)\n",
+    "p409,p624 =parse('''   >409_ScFBA1tpf (37-mer)\n",
     "                              TTAAATAATAACAATACTGACAGTACTAAATAATTGC                                            \n",
     "                              >624_ScFBA1tpr_PacI (29-mer)\n",
     "                              taattaaTTTGAATATGTATTACTTGGTT''', ds=False)"
@@ -141,10 +141,10 @@
    },
    "outputs": [],
    "source": [
-    "p1 = pydna.read(\"pYPK0_TEF1_PsXYL1_N272D_TDH3.gb\")\n",
-    "p2 = pydna.read(\"pYPK0_TDH3_PsXYL2_PGI1.gb\")\n",
-    "p3 = pydna.read(\"pYPK0_PGI1_ScXKS1_FBA1.gb\")\n",
-    "p4 = pydna.read(\"pYPK0_FBA1_ScTAL1_PDC1.gb\")"
+    "p1 =read(\"pYPK0_TEF1_PsXYL1_N272D_TDH3.gb\")\n",
+    "p2 =read(\"pYPK0_TDH3_PsXYL2_PGI1.gb\")\n",
+    "p3 =read(\"pYPK0_PGI1_ScXKS1_FBA1.gb\")\n",
+    "p4 =read(\"pYPK0_FBA1_ScTAL1_PDC1.gb\")"
    ]
   },
   {
@@ -155,10 +155,10 @@
    },
    "outputs": [],
    "source": [
-    "cas1  = pydna.pcr( p167, p623, p1)\n",
-    "cas2  = pydna.pcr( p415, p622, p2)\n",
-    "cas3  = pydna.pcr( p549, p624, p3)\n",
-    "cas4  = pydna.pcr( p409, p166, p4)"
+    "cas1  =pcr( p167, p623, p1)\n",
+    "cas2  =pcr( p415, p622, p2)\n",
+    "cas3  =pcr( p549, p624, p3)\n",
+    "cas4  =pcr( p409, p166, p4)"
    ]
   },
   {
@@ -180,7 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly( [pYPK0_E_Z, cas1, cas2, cas3, cas4] , limit = 61)"
+    "asm =Assembly( [pYPK0_E_Z, cas1, cas2, cas3, cas4] , limit = 61)"
    ]
   },
   {
@@ -360,8 +360,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pMEC1135.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded =read(\"pMEC1135.gb\")\n",
     "print(len(reloaded))\n",
     "print(reloaded.cseguid())\n",
     "print(reloaded.description)"
