--- a/pMEC1137.ipynb
+++ b/pMEC1137.ipynb
@@ -44,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -119,27 +119,27 @@
    },
    "outputs": [],
    "source": [
-    "p417,p626 = pydna.parse('''>417_ScTEF1tpf (30-mer)\n",
+    "p417,p626 =parse('''>417_ScTEF1tpf (30-mer)\n",
     "                     TTAAATAACAATGCATACTTTGTACGTTCA\n",
     "                     >626_ScTEF1tpr_PacI (35-mer)\n",
     "                     taattaaTTTGTAATTAAAACTTAGATTAGATTGC''', ds=False)\n",
     "\n",
-    "p415,p623 = pydna.parse(''' >415_ScTDH3tpf (29-mer)\n",
+    "p415,p623 =parse(''' >415_ScTDH3tpf (29-mer)\n",
     "                      TTAAATAATAAAAAACACGCTTTTTCAGT\n",
     "                      >623_ScTDH3tpr_PacI (33-mer)\n",
     "                      taattaaTTTGTTTGTTTATGTGTGTTTATTCG''', ds=False)\n",
     "\n",
-    "p549,p622 = pydna.parse(''' >549_ScPGI1tpf (27-mer)\n",
+    "p549,p622 =parse(''' >549_ScPGI1tpf (27-mer)\n",
     "                      ttaaatAATTCAGTTTTCTGACTGAGT\n",
     "                      >622_ScPGI1tpr_PacI (28-mer)\n",
     "                      taattaaTTTTAGGCTGGTATCTTGATT''', ds=False)\n",
     "\n",
-    "p409,p624 = pydna.parse('''>409_ScFBA1tpf (37-mer)\n",
+    "p409,p624 =parse('''>409_ScFBA1tpf (37-mer)\n",
     "                     TTAAATAATAACAATACTGACAGTACTAAATAATTGC\n",
     "                     >624_ScFBA1tpr_PacI (29-mer)\n",
     "                     taattaaTTTGAATATGTATTACTTGGTT''', ds=False)\n",
     "\n",
-    "p411, p413, p419, p537, p539, p621, p625, p647, p648, p651, p652, p660  = pydna.parse('''\n",
+    "p411, p413, p419, p537, p539, p621, p625, p647, p648, p651, p652, p660  =parse('''\n",
     ">411_ScENO2tpf (23-mer)\n",
     "TTAAATACGCGGCGTTATGTCAC\n",
     ">413_ScPDC1tpf (24-mer)\n",
@@ -174,10 +174,10 @@
    },
    "outputs": [],
    "source": [
-    "p1 = pydna.read(\"pYPK0_PDC1_ScTKL1_RPS19b.gb\")\n",
-    "p2 = pydna.read(\"pYPK0_RPS19b_ScRPE1_RPS19a.gb\")\n",
-    "p3 = pydna.read(\"pYPK0_RPS19a_ScRKI1_TPI1.gb\")\n",
-    "p4 = pydna.read(\"pYPK0_TPI1_CiGXF1_ENO2.gb\")"
+    "p1 =read(\"pYPK0_PDC1_ScTKL1_RPS19b.gb\")\n",
+    "p2 =read(\"pYPK0_RPS19b_ScRPE1_RPS19a.gb\")\n",
+    "p3 =read(\"pYPK0_RPS19a_ScRKI1_TPI1.gb\")\n",
+    "p4 =read(\"pYPK0_TPI1_CiGXF1_ENO2.gb\")"
    ]
   },
   {
@@ -188,10 +188,10 @@
    },
    "outputs": [],
    "source": [
-    "cas1  = pydna.pcr( p167, p647, p1)\n",
-    "cas2  = pydna.pcr( p648, p651, p2)\n",
-    "cas3  = pydna.pcr( p652, p621, p3)\n",
-    "cas4  = pydna.pcr( p419, p166, p4)"
+    "cas1  =pcr( p167, p647, p1)\n",
+    "cas2  =pcr( p648, p651, p2)\n",
+    "cas3  =pcr( p652, p621, p3)\n",
+    "cas4  =pcr( p419, p166, p4)"
    ]
   },
   {
@@ -235,7 +235,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly( [pYPK0_E_Z, cas1, cas2, cas3, cas4] , limit = 61)"
+    "asm =Assembly( [pYPK0_E_Z, cas1, cas2, cas3, cas4] , limit = 61)"
    ]
   },
   {
@@ -428,8 +428,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pMEC1137.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded =read(\"pMEC1137.gb\")\n",
     "print(reloaded.cseguid()) \n",
     "print(reloaded.description)"
    ]
