--- a/pYPK0.ipynb
+++ b/pYPK0.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "pMEC1030 = pydna.read(\"pMEC1030.gb\")"
+    "pMEC1030 =read(\"pMEC1030.gb\")"
    ]
   },
   {
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")"
+    "gb =Genbank(\"bjornjobbb@gmail.com\")"
    ]
   },
   {
@@ -194,7 +194,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pcaps_pvu, psu_bam_eco), limit=200)"
+    "asm =Assembly((pcaps_pvu, psu_bam_eco), limit=200)"
    ]
   },
   {
@@ -218,10 +218,10 @@
     {
      "data": {
       "text/plain": [
-       " -|pMEC1030|700\n",
+       " -|AJ001614|700\n",
        "|           \\/\n",
        "|           /\\\n",
-       "|           700|AJ001614_rc|245\n",
+       "|           700|pMEC1030_rc|245\n",
        "|                           \\/\n",
        "|                           /\\\n",
        "|                           245-\n",
@@ -367,8 +367,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pYPK0.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded =read(\"pYPK0.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   }
