--- a/pYPK0_FBA1_HIS3_PDC1.ipynb
+++ b/pYPK0_FBA1_HIS3_PDC1.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -72,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_FBA1 = pydna.read(\"pYPKa_Z_FBA1.gb\")"
+    "promoter_clone = pYPKa_Z_FBA1 =read(\"pYPKa_Z_FBA1.gb\")"
    ]
   },
   {
@@ -83,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "gene_clone = pydna.read(\"pYPKa_A_ScHIS3.gb\")"
+    "gene_clone =read(\"pYPKa_A_ScHIS3.gb\")"
    ]
   },
   {
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_PDC1 = pydna.read(\"pYPKa_E_PDC1.gb\")"
+    "terminator_clone = pYPKa_E_PDC1 =read(\"pYPKa_E_PDC1.gb\")"
    ]
   },
   {
@@ -105,9 +105,9 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "g  = pydna.pcr( p468, p467, gene_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "g  =pcr( p468, p467, gene_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -151,7 +151,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -270,7 +270,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -281,7 +281,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_FBA1_HIS3_PDC1.gb\")"
+    "reloaded =read(\"pYPK0_FBA1_HIS3_PDC1.gb\")"
    ]
   },
   {
