--- a/pYPK0_HIS3.ipynb
+++ b/pYPK0_HIS3.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer\n",
     "from ypk_std_primers import p166, p167, p567, p568, p468, p467"
    ]
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa_A_HIS3 = pydna.read(\"pYPKa_A_ScHIS3.gb\")"
+    "pYPKa_A_HIS3 =read(\"pYPKa_A_ScHIS3.gb\")"
    ]
   },
   {
@@ -72,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "g  = pydna.pcr( p468, p467, pYPKa_A_HIS3)"
+    "g  =pcr( p468, p467, pYPKa_A_HIS3)"
    ]
   },
   {
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "asm = pydna.Assembly((pYPK0_lin, g))\n",
+    "asm =Assembly((pYPK0_lin, g))\n",
     "asm"
    ]
   },
