--- a/pYPK0_PGI1_ScXKS1_FBA1.ipynb
+++ b/pYPK0_PGI1_ScXKS1_FBA1.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_PGI1 = pydna.read(\"pYPKa_Z_PGI1.gb\")"
+    "promoter_clone = pYPKa_Z_PGI1 =read(\"pYPKa_Z_PGI1.gb\")"
    ]
   },
   {
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")\n",
+    "gb =Genbank(\"bjornjobbb@gmail.com\")\n",
     "gene_template = gb.nucleotide(\"NM_001181323.3\")"
    ]
   },
@@ -237,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "pf, pr = pydna.parse('''>XX_YPK_rec_fwd \n",
+    "pf, pr =parse('''>XX_YPK_rec_fwd \n",
     "                        gtcgaggaacgccaggttgcccactttctcactagtgaAAATGTTGTGTTCAGTAATTCAGAG\n",
     "                        >XK_YPK_rec_rev \n",
     "                        ATTTAAatcctgatgcgtttgtctgcacagatggcgcgTTAGATGAGAGTCTTTTCCAGTTC''')"
@@ -251,7 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "g = pydna.pcr( pf, pr, orf)"
+    "g =pcr( pf, pr, orf)"
    ]
   },
   {
@@ -289,7 +289,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_FBA1 = pydna.read(\"pYPKa_E_FBA1.gb\")"
+    "terminator_clone = pYPKa_E_FBA1 =read(\"pYPKa_E_FBA1.gb\")"
    ]
   },
   {
@@ -300,8 +300,8 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -345,7 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -525,7 +525,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_PGI1_ScXKS1_FBA1.gb\")"
+    "reloaded =read(\"pYPK0_PGI1_ScXKS1_FBA1.gb\")"
    ]
   },
   {
