--- a/pYPK0_TDH1_rev_HIS3_ENO2.ipynb
+++ b/pYPK0_TDH1_rev_HIS3_ENO2.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_TDH1_rev = pydna.read(\"pYPKa_Z_TDH1_rev.gb\")"
+    "promoter_clone = pYPKa_Z_TDH1_rev =read(\"pYPKa_Z_TDH1_rev.gb\")"
    ]
   },
   {
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "gene_clone = pydna.read(\"pYPKa_A_ScHIS3.gb\")"
+    "gene_clone =read(\"pYPKa_A_ScHIS3.gb\")"
    ]
   },
   {
@@ -93,7 +93,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_ENO2 = pydna.read(\"pYPKa_E_ENO2.gb\")"
+    "terminator_clone = pYPKa_E_ENO2 =read(\"pYPKa_E_ENO2.gb\")"
    ]
   },
   {
@@ -104,9 +104,9 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "g  = pydna.pcr( p468, p467, gene_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "g  =pcr( p468, p467, gene_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -150,7 +150,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -291,7 +291,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_TDH1_rev_HIS3_ENO2.gb\")"
+    "reloaded =read(\"pYPK0_TDH1_rev_HIS3_ENO2.gb\")"
    ]
   },
   {
