--- a/pYPK0_TDH3_PsXYL2_PGI1.ipynb
+++ b/pYPK0_TDH3_PsXYL2_PGI1.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_TDH3 = pydna.read(\"pYPKa_Z_TDH3.gb\")"
+    "promoter_clone = pYPKa_Z_TDH3 =read(\"pYPKa_Z_TDH3.gb\")"
    ]
   },
   {
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")\n",
+    "gb =Genbank(\"bjornjobbb@gmail.com\")\n",
     "gene_template = gb.nucleotide(\"A16166.1\")"
    ]
   },
@@ -255,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "pf, pr = pydna.parse('''>XDH_YPK_rec_fwd \n",
+    "pf, pr =parse('''>XDH_YPK_rec_fwd \n",
     "                        gtcgaggaacgccaggttgcccactttctcactagtgaAAATGACTGCTAACCCTTCCTTGGTG\n",
     "                        >XDH_YPK_rec_rev \n",
     "                        ATTTAAatcctgatgcgtttgtctgcacagatggcgcgTTACTCAGGGCCGTCAATGAGACA''')"
@@ -269,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "g = pydna.pcr( pf, pr, orf)"
+    "g =pcr( pf, pr, orf)"
    ]
   },
   {
@@ -307,7 +307,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_PGI1 = pydna.read(\"pYPKa_E_PGI1.gb\")"
+    "terminator_clone = pYPKa_E_PGI1 =read(\"pYPKa_E_PGI1.gb\")"
    ]
   },
   {
@@ -318,8 +318,8 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -363,7 +363,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -543,7 +543,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_TDH3_PsXYL2_PGI1.gb\")"
+    "reloaded =read(\"pYPK0_TDH3_PsXYL2_PGI1.gb\")"
    ]
   },
   {
