--- a/pYPK0_TEF1_HIS3_TDH3.ipynb
+++ b/pYPK0_TEF1_HIS3_TDH3.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -75,7 +75,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -88,7 +88,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_TEF1 = pydna.read(\"pYPKa_Z_TEF1.gb\")"
+    "promoter_clone = pYPKa_Z_TEF1 =read(\"pYPKa_Z_TEF1.gb\")"
    ]
   },
   {
@@ -101,7 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "gene_clone = pydna.read(\"pYPKa_A_ScHIS3.gb\")"
+    "gene_clone =read(\"pYPKa_A_ScHIS3.gb\")"
    ]
   },
   {
@@ -114,7 +114,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_TDH3 = pydna.read(\"pYPKa_E_TDH3.gb\")"
+    "terminator_clone = pYPKa_E_TDH3 =read(\"pYPKa_E_TDH3.gb\")"
    ]
   },
   {
@@ -127,9 +127,9 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "g  = pydna.pcr( p468, p467, gene_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "g  =pcr( p468, p467, gene_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -179,7 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -335,8 +335,8 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pYPK0_TEF1_HIS3_TDH3.gb\")"
+    "from pydna.all import *\n",
+    "reloaded =read(\"pYPK0_TEF1_HIS3_TDH3.gb\")"
    ]
   },
   {
