--- a/pYPK0_TEF1_PsXYL1_TDH3.ipynb
+++ b/pYPK0_TEF1_PsXYL1_TDH3.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -72,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_TEF1 = pydna.read(\"pYPKa_Z_TEF1.gb\")"
+    "promoter_clone = pYPKa_Z_TEF1 =read(\"pYPKa_Z_TEF1.gb\")"
    ]
   },
   {
@@ -116,7 +116,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")\n",
+    "gb =Genbank(\"bjornjobbb@gmail.com\")\n",
     "gene_template = gb.nucleotide(\"X59465.1\")"
    ]
   },
@@ -263,7 +263,7 @@
    },
    "outputs": [],
    "source": [
-    "pf, pr = pydna.parse('''>XR_YPK_rec_fwd \n",
+    "pf, pr =parse('''>XR_YPK_rec_fwd \n",
     "                        gtcgaggaacgccaggttgcccactttctcactagtgaAAATGCCTTCTATTAAGTTGAACTCTGG\n",
     "                        >XR_YPK_rec_rev \n",
     "                        ATTTAAatcctgatgcgtttgtctgcacagatggcgcgTTAGACGAAGATAGGAATCTTGTCCC''')"
@@ -277,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "g = pydna.pcr( pf, pr, orf)"
+    "g =pcr( pf, pr, orf)"
    ]
   },
   {
@@ -315,7 +315,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_TDH3 = pydna.read(\"pYPKa_E_TDH3.gb\")"
+    "terminator_clone = pYPKa_E_TDH3 =read(\"pYPKa_E_TDH3.gb\")"
    ]
   },
   {
@@ -326,8 +326,8 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -371,7 +371,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -551,7 +551,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_TEF1_PsXYL1_TDH3.gb\")"
+    "reloaded =read(\"pYPK0_TEF1_PsXYL1_TDH3.gb\")"
    ]
   },
   {
