--- a/pYPK1.ipynb
+++ b/pYPK1.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "pMEC1042 = pydna.read(\"pMEC1042.gb\")"
+    "pMEC1042 =read(\"pMEC1042.gb\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")"
+    "gb =Genbank(\"bjornjobb@gmail.com\")"
    ]
   },
   {
@@ -69,7 +69,7 @@
     "pCAPs_pvu   = pCAPs.linearize(PvuI)\n",
     "pMEC1042_EB = pMEC1042.cut(BamHI, EcoRI).pop(0)\n",
     "\n",
-    "asm=pydna.Assembly([pMEC1042_EB, pCAPs_pvu], limit=245)\n",
+    "asm=Assembly([pMEC1042_EB, pCAPs_pvu], limit=245)\n",
     "\n",
     "pYPK1 = asm.circular_products[0]\n",
     "\n",
@@ -127,8 +127,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPK1.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPK1.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   },
