--- a/pYPK2.ipynb
+++ b/pYPK2.ipynb
@@ -18,9 +18,9 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
-    "pYPK1 = pydna.read(\"pYPK1.gb\")\n",
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")"
+    "from pydna.all import *\n",
+    "pYPK1 =read(\"pYPK1.gb\")\n",
+    "gb =Genbank(\"bjornjobb@gmail.com\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "p478, p666 = pydna.parse('''\n",
+    "p478, p666 =parse('''\n",
     ">478_bleMX4f\n",
     "aatttaaattataattatttttatagcacgtgatgaaaaggtccccgccgggtc\n",
     "\n",
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "kanmarker = pydna.pcr( p478, p666, pFA6a_KanMX4)"
+    "kanmarker =pcr( p478, p666, pFA6a_KanMX4)"
    ]
   },
   {
@@ -83,7 +83,7 @@
     "\n",
     "vect = pYPK1.linearize(PvuII)\n",
     "\n",
-    "a=pydna.Assembly([kanmarker, vect])\n",
+    "a=Assembly([kanmarker, vect])\n",
     "\n",
     "pYPK2 = a.circular_products[0]\n",
     "\n",
@@ -122,8 +122,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPK2.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPK2.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   },
