--- a/pYPK3.ipynb
+++ b/pYPK3.ipynb
@@ -18,9 +18,9 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
-    "pYPK1 = pydna.read(\"pYPK1.gb\")\n",
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")"
+    "from pydna.all import *\n",
+    "pYPK1 =read(\"pYPK1.gb\")\n",
+    "gb =Genbank(\"bjornjobb@gmail.com\")"
    ]
   },
   {
@@ -33,8 +33,8 @@
    "source": [
     "githubuser=\"BjornFJohansson\"\n",
     "gistid = \"c5424b7ebbf553c52053\"\n",
-    "x= pydna.download_text('https://gist.githubusercontent.com/{user}/{gistid}/raw'.format(user=githubuser, gistid=gistid))\n",
-    "pAG32 = pydna.read(x)"
+    "x=download_text('https://gist.githubusercontent.com/{user}/{gistid}/raw'.format(user=githubuser, gistid=gistid))\n",
+    "pAG32 =read(x)"
    ]
   },
   {
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "p150,p149,p325,p324,p678,p666 = pydna.parse('''\n",
+    "p150,p149,p325,p324,p678,p666 =parse('''\n",
     ">150_MX4fwd (25-mer) Primer in the Ashbya gossypi TEF promoter in forward direction. contaminated?\n",
     "AAAATCTTGCTAGGATACAGTTCTC\n",
     "\n",
@@ -103,14 +103,14 @@
     ">666_pYPK0_hygrev (70-mer)\n",
     "catctttgacagcttatcatcgataagctCGACTCACTATAGGGAGACC''', ds=False)\n",
     "\n",
-    "hygmarker1 = pydna.pcr( p678, p324, pAG32 )\n",
-    "hygmarker2 = pydna.pcr( p325, p666, pAG32 )\n",
+    "hygmarker1 =pcr( p678, p324, pAG32 )\n",
+    "hygmarker2 =pcr( p325, p666, pAG32 )\n",
     "\n",
     "from Bio.Restriction import PvuII\n",
     "\n",
     "vect = pYPK1.linearize(PvuII)\n",
     "\n",
-    "a=pydna.Assembly([hygmarker1, hygmarker2, vect], limit =251)\n",
+    "a=Assembly([hygmarker1, hygmarker2, vect], limit =251)\n",
     "\n",
     "pYPK3 = a.circular_products[0]\n",
     "\n",
@@ -149,8 +149,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPK3.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPK3.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   }
