--- a/pYPK4.ipynb
+++ b/pYPK4.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -31,8 +31,8 @@
    "source": [
     "githubuser=\"BjornFJohansson\"\n",
     "gistid = \"c5424b7ebbf553c52053\"\n",
-    "x= pydna.download_text('https://gist.githubusercontent.com/{user}/{gistid}/raw'.format(user=githubuser, gistid=gistid))\n",
-    "pAG32 = pydna.read(x)"
+    "x=download_text('https://gist.githubusercontent.com/{user}/{gistid}/raw'.format(user=githubuser, gistid=gistid))\n",
+    "pAG32 =read(x)"
    ]
   },
   {
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "p150,p149,p325,p324,p678,p666 = pydna.parse('''\n",
+    "p150,p149,p325,p324,p678,p666 =parse('''\n",
     ">150_MX4fwd (25-mer) Primer in the Ashbya gossypi TEF promoter in forward direction. contaminated?\n",
     "AAAATCTTGCTAGGATACAGTTCTC\n",
     "\n",
@@ -69,10 +69,10 @@
     ">666_pYPK0_hygrev (70-mer)\n",
     "catctttgacagcttatcatcgataagctCGACTCACTATAGGGAGACC''', ds=False)\n",
     "\n",
-    "hygmarker1 = pydna.pcr( p678, p324, pAG32 )\n",
-    "hygmarker2 = pydna.pcr( p325, p666, pAG32 )\n",
+    "hygmarker1 =pcr( p678, p324, pAG32 )\n",
+    "hygmarker2 =pcr( p325, p666, pAG32 )\n",
     "\n",
-    "pYPK0=pydna.read(\"pYPK0.gb\")\n",
+    "pYPK0=read(\"pYPK0.gb\")\n",
     "\n",
     "from Bio.Restriction import SbfI\n",
     "\n",
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "asm=pydna.Assembly((vect,hygmarker1,hygmarker2 ))\n",
+    "asm=Assembly((vect,hygmarker1,hygmarker2 ))\n",
     "asm"
    ]
   },
@@ -206,8 +206,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPK4.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPK4.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   },
