--- a/pYPK7.ipynb
+++ b/pYPK7.ipynb
@@ -17,11 +17,11 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "\n",
-    "pYPK0 = pydna.read(\"pYPK0.gb\")\n",
+    "pYPK0 =read(\"pYPK0.gb\")\n",
     "\n",
-    "gb=pydna.Genbank(\"bjornjobb@gmail.com\")\n",
+    "gb=Genbank(\"bjornjobb@gmail.com\")\n",
     "\n",
     "template = gb.nucleotide(\"AF298793.1\") # pUG6\n",
     "#template = gb.nucleotide(\"AJ002680.1\") # pFA6a-kanMX4"
@@ -35,14 +35,14 @@
    },
    "outputs": [],
    "source": [
-    "p678, p666 = pydna.parse('''\n",
+    "p678, p666 =parse('''\n",
     ">678_pYPK0_hygfwd: (77-mer)\n",
     "ctcacgttaagggattttggtcatgagCACATACGATTTAGGTGACACTATAGAAC\n",
     "\n",
     ">666_pYPK0_hygrev (70-mer)\n",
     "catctttgacagcttatcatcgataagctCGACTCACTATAGGGAGACC''', ds=False)\n",
     "\n",
-    "kanmarker = pydna.pcr( p678, p666, template)"
+    "kanmarker =pcr( p678, p666, template)"
    ]
   },
   {
@@ -85,7 +85,7 @@
     }
    ],
    "source": [
-    "asm=pydna.Assembly([kanmarker, vect])\n",
+    "asm=Assembly([kanmarker, vect])\n",
     "asm"
    ]
   },
@@ -182,8 +182,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPK7.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPK7.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   },
