--- a/pYPKa.ipynb
+++ b/pYPKa.ipynb
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -73,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")"
+    "gb =Genbank(\"bjornjobbb@gmail.com\")"
    ]
   },
   {
@@ -235,7 +235,7 @@
    },
    "outputs": [],
    "source": [
-    "primers = pydna.parse('''>568_pCAPsAjiIR (22-mer)\n",
+    "primers =parse('''>568_pCAPsAjiIR (22-mer)\n",
     "                         GTGCcatctgtgcagacaaacg\n",
     "\n",
     "                         >567_pCAPsAjiIF (23-mer)\n",
@@ -250,7 +250,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa = pydna.pcr(primers, pCAPs).looped().synced(pCAPs)"
+    "pYPKa =pcr(primers, pCAPs).looped().synced(pCAPs)"
    ]
   },
   {
@@ -323,7 +323,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPKa.gb\")"
+    "reloaded =read(\"pYPKa.gb\")"
    ]
   },
   {
