--- a/pYPKa_A_CiGXF1.ipynb
+++ b/pYPKa_A_CiGXF1.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -19,18 +19,18 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa=pydna.read(\"pYPKa.gb\")\n",
+    "pYPKa=read(\"pYPKa.gb\")\n",
     "\n",
     "\n",
     "from Bio.Restriction import ZraI, AjiI, EcoRV\n",
     "\n",
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")\n",
+    "gb =Genbank(\"bjornjobbb@gmail.com\")\n",
     "\n",
     "enz = AjiI\n",
     "\n",
     "gene = gb.nucleotide(\"AJ937350\") # Candida intermedia gxf1 gene for glucose/xylose facilitator 1\n",
     "\n",
-    "primers = pydna.parse('''\n",
+    "primers =parse('''\n",
     ">553_GXF1_YPK_fwd (29-mer)\n",
     "CGCGCCAAAatgtcacaagattcgcattc\n",
     "\n",
@@ -40,7 +40,7 @@
     "\n",
     "pYPKa_cut = pYPKa.cut(enz).pop()\n",
     "\n",
-    "gene = pydna.pcr( primers, gene)\n",
+    "gene =pcr( primers, gene)\n",
     "\n",
     "pYPKa_enz_gene = (pYPKa_cut + gene).looped()\n",
     "\n",
