--- a/pYPKa_E_TDH1.ipynb
+++ b/pYPKa_E_TDH1.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa = pydna.read(\"pYPKa.gb\")"
+    "pYPKa =read(\"pYPKa.gb\")"
    ]
   },
   {
@@ -164,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")"
+    "gb =Genbank(\"bjornjobb@gmail.com\")"
    ]
   },
   {
@@ -275,12 +275,12 @@
     }
    ],
    "source": [
-    "f,r = pydna.parse(\"\"\">547_ScTDH1tpf (27-mer)\n",
+    "f,r =parse(\"\"\">547_ScTDH1tpf (27-mer)\n",
     "                     ttaaatAAAAGCTCGACCTTAAATAAG\n",
     "                     >653_ScTDH1tpr_PacI\n",
     "                     taattaaTTTGTTTTGTGTGTAAATTTAG\"\"\", ds=False)\n",
     "\n",
-    "insert = pydna.pcr(f, r, template)\n",
+    "insert =pcr(f, r, template)\n",
     "insert"
    ]
   },
@@ -478,8 +478,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pYPKa_E_TDH1.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded =read(\"pYPKa_E_TDH1.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   },
