--- a/pYPKp3.ipynb
+++ b/pYPKp3.ipynb
@@ -18,9 +18,9 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "\n",
-    "pYPK3 = pydna.read(\"pYPK3.gb\")"
+    "pYPK3 =read(\"pYPK3.gb\")"
    ]
   },
   {
@@ -31,13 +31,13 @@
    },
    "outputs": [],
    "source": [
-    "f,r = pydna.parse(''' >866_pYPKpwF (39-mer)\n",
+    "f,r =parse(''' >866_pYPKpwF (39-mer)\n",
     "                      GCATGATATCttcacaggcggttttcgcacgtacccatg\n",
     "\n",
     "                      >865_pYPKpwR (39-mer)\n",
     "                      GCATGACGTCaccagacgctatgactcacccggacggca''', ds=False)\n",
     "\n",
-    "seq = pydna.pcr(f, r, pYPK3)\n",
+    "seq =pcr(f, r, pYPK3)\n",
     "\n",
     "seq = seq.looped()\n",
     "\n",
@@ -124,8 +124,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPKp3.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPKp3.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   }
