--- a/pYPKp4.ipynb
+++ b/pYPKp4.ipynb
@@ -18,9 +18,9 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "\n",
-    "pYPK4 = pydna.read(\"pYPK4.gb\")"
+    "pYPK4 =read(\"pYPK4.gb\")"
    ]
   },
   {
@@ -42,13 +42,13 @@
     }
    ],
    "source": [
-    "f,r = pydna.parse(''' >866_pYPKpwF (49-mer)\n",
+    "f,r =parse(''' >866_pYPKpwF (49-mer)\n",
     "                      GCATGATATCttcacaggcggttttcgcacgtacccatg\n",
     "\n",
     "                      >865_pYPKpwR (49-mer)\n",
     "                      GCATGACGTCaccagacgctatgactcacccggacggca''', ds=False)\n",
     "\n",
-    "seq = pydna.pcr(f, r, pYPK4)\n",
+    "seq =pcr(f, r, pYPK4)\n",
     "\n",
     "seq = seq.looped()\n",
     "\n",
@@ -117,8 +117,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPKp4.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPKp4.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   },
