--- a/pYPKp7.ipynb
+++ b/pYPKp7.ipynb
@@ -18,9 +18,9 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "\n",
-    "pYPK7 = pydna.read(\"pYPK7.gb\")"
+    "pYPK7 =read(\"pYPK7.gb\")"
    ]
   },
   {
@@ -42,13 +42,13 @@
     }
    ],
    "source": [
-    "f,r = pydna.parse(''' >866_pYPKpwF (79-mer)\n",
+    "f,r =parse(''' >866_pYPKpwF (79-mer)\n",
     "                      GCATGATATCttcacaggcggttttcgcacgtacccatg\n",
     "\n",
     "                      >865_pYPKpwR (79-mer)\n",
     "                      GCATGACGTCaccagacgctatgactcacccggacggca''', ds=False)\n",
     "\n",
-    "seq = pydna.pcr(f, r, pYPK7)\n",
+    "seq =pcr(f, r, pYPK7)\n",
     "\n",
     "seq = seq.looped()\n",
     "\n",
@@ -106,8 +106,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPKp7.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPKp7.gb\")\n",
     "reloaded.verify_stamp()\n"
    ]
   },
