--- a/pYPKpw.ipynb
+++ b/pYPKpw.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "pf, pr = pydna.parse('''  >866_pYPKpwF (39-mer)\n",
+    "pf, pr =parse('''  >866_pYPKpwF (39-mer)\n",
     "                          GCATGATATCttcacaggcggttttcgcacgtacccatg\n",
     "\n",
     "                          >865_pYPKpwR (39-mer)\n",
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "pcr_vector_backbone_prod = pydna.pcr(pr, pf, pYPK0)"
+    "pcr_vector_backbone_prod =pcr(pr, pf, pYPK0)"
    ]
   },
   {
@@ -369,8 +369,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded=pydna.read(\"pYPKpw.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded=read(\"pYPKpw.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   }
