--- a/ypk_std_primers.ipynb
+++ b/ypk_std_primers.ipynb
@@ -2,38 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Standard primers for the Yeast Pathway Kit"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pydna"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The six primers below are necessary and sufficient to carry out assemblies with the YPK system."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "p567,p577,p468,p467,p568,p578,p775,p778  =  pydna.parse(''' >567_pCAPsAjiIF (23-mer)\n",
+    "from pydna.parsers import parse\n",
+    "p567,p577,p468,p467,p568,p578,p775,p778  =       parse(''' >567_pCAPsAjiIF (23-mer)\n",
     "                                                            GTcggctgcaggtcactagtgag\n",
     "                                                            >577_crp585-557 (29-mer)\n",
     "                                                            gttctgatcctcgagcatcttaagaattc\n",
@@ -55,7 +53,7 @@
     "\n",
     "# The primers 167 and 166 were used instead of 577 and 578 for some constructions\n",
     "\n",
-    "p167,p166 = pydna.parse(''' >167 pCAPSfw (24-mer)\n",
+    "p167,p166 =       parse(''' >167 pCAPSfw (24-mer)\n",
     "                            TCCTGACGGGTAATTTTGATTTGC\n",
     "                            >166 pCAPSrv (24-mer) \n",
     "                            CTGTGAAGTGGCTGAAATTTCGTA''')"
@@ -63,7 +61,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Primer positions in pYPKa derived vectors\n",
     "\n",
