--- a/pYPK0_FBA1_ScTAL1_PDC1.ipynb
+++ b/pYPK0_FBA1_ScTAL1_PDC1.ipynb
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -72,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_FBA1 = pydna.read(\"pYPKa_Z_FBA1.gb\")"
+    "promoter_clone = pYPKa_Z_FBA1 =read(\"pYPKa_Z_FBA1.gb\")"
    ]
   },
   {
@@ -116,7 +116,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")\n",
+    "gb =Genbank(\"bjornjobbb@gmail.com\")\n",
     "gene_template = gb.nucleotide(\"NM_001182243.1\")"
    ]
   },
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "pf, pr = pydna.parse('''>TAL1_YPK_rec_fwd \n",
+    "pf, pr =parse('''>TAL1_YPK_rec_fwd \n",
     "                        gtcgaggaacgccaggttgcccactttctcactagtgaAAATGTCTGAACCAGCTCAAAAGAA\n",
     "                        >TAL1_YPK_rec_rev \n",
     "                        ATTTAAatcctgatgcgtttgtctgcacagatggcgcgTTAAGCGGTAACTTTCTTTTCAATCA''')"
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "g = pydna.pcr( pf, pr, orf)"
+    "g =pcr( pf, pr, orf)"
    ]
   },
   {
@@ -290,7 +290,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_PDC1 = pydna.read(\"pYPKa_E_PDC1.gb\")"
+    "terminator_clone = pYPKa_E_PDC1 =read(\"pYPKa_E_PDC1.gb\")"
    ]
   },
   {
@@ -301,8 +301,8 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -346,7 +346,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -526,7 +526,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -537,7 +537,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_FBA1_ScTAL1_PDC1.gb\")"
+    "reloaded =read(\"pYPK0_FBA1_ScTAL1_PDC1.gb\")"
    ]
   },
   {
