--- a/pYPK0_PGI1_CiGXF1_TDH3.ipynb
+++ b/pYPK0_PGI1_CiGXF1_TDH3.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -15,7 +17,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "\n",
+    "from pydna.amplify  import pcr\n",
+    "from pydna.parsers  import parse\n",
+    "from pydna.readers  import read\n",
+    "from pydna.genbank  import Genbank\n",
+    "from pydna.assembly import Assembly\n",
+    "from pydna.dseqrecord import Dseqrecord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -38,15 +60,6 @@
     }
    ],
    "source": [
-    "#!/usr/bin/env python\n",
-    "\n",
-    "from pydna import pcr\n",
-    "from pydna import parse\n",
-    "from pydna import read\n",
-    "from pydna import Genbank\n",
-    "from pydna import Assembly\n",
-    "from pydna import Dseqrecord\n",
-    "\n",
     "p577,p578,p468,p467,p567,p568 =    parse('''>577        \n",
     "                                            gttctgatcctcgagcatcttaagaattc                                                \n",
     "                                            >578          \n",
@@ -83,9 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -104,21 +119,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "##Download sequence\n",
     "\n",
     "[pYPK0_PGI1_CiGXF1_TDH3](pYPK0_PGI1_CiGXF1_TDH3.gb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
