--- a/pYPK0_PGI1_HIS3_TDH3.ipynb
+++ b/pYPK0_PGI1_HIS3_TDH3.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#pYPK0_PGI1_HIS3_TDH3"
    ]
@@ -11,7 +14,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -22,7 +27,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "\n",
+    "from pydna.amplify  import pcr\n",
+    "from pydna.parsers  import parse\n",
+    "from pydna.readers  import read\n",
+    "from pydna.genbank  import Genbank\n",
+    "from pydna.assembly import Assembly\n",
+    "from pydna.dseqrecord import Dseqrecord"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -71,14 +96,6 @@
     }
    ],
    "source": [
-    "#!/usr/bin/env python\n",
-    "\n",
-    "from pydna import pcr\n",
-    "from pydna import parse\n",
-    "from pydna import Genbank\n",
-    "from pydna import Assembly\n",
-    "from pydna import Dseqrecord\n",
-    "\n",
     "p577,p578,p468,p467,p567,p568 =    parse('''>577        \n",
     "                                            gttctgatcctcgagcatcttaagaattc                                                \n",
     "                                            >578          \n",
@@ -113,9 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -134,9 +153,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "##Download sequence\n",
+    "## Download sequence\n",
     "\n",
     "[pYPK0_PGI1_CiGXF1_TDH3](pYPK0_PGI1_CiGXF1_TDH3.gb)"
    ]
