--- a/pYPK0_RPS19a_ScRKI1_TPI1.ipynb
+++ b/pYPK0_RPS19a_ScRKI1_TPI1.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_RPS19a = pydna.read(\"pYPKa_Z_RPS19a.gb\")"
+    "promoter_clone = pYPKa_Z_RPS19a =read(\"pYPKa_Z_RPS19a.gb\")"
    ]
   },
   {
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "gene_clone = pYPKa_A_ScRKI1 = pydna.read(\"pYPKa_A_ScRKI1.gb\")"
+    "gene_clone = pYPKa_A_ScRKI1 =read(\"pYPKa_A_ScRKI1.gb\")"
    ]
   },
   {
@@ -93,7 +93,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_TPI1 = pydna.read(\"pYPKa_E_TPI1.gb\")"
+    "terminator_clone = pYPKa_E_TPI1 =read(\"pYPKa_E_TPI1.gb\")"
    ]
   },
   {
@@ -104,9 +104,9 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "g  = pydna.pcr( p468, p467, gene_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "g  =pcr( p468, p467, gene_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -150,7 +150,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -328,7 +328,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -339,7 +339,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_RPS19a_ScRKI1_TPI1.gb\")"
+    "reloaded =read(\"pYPK0_RPS19a_ScRKI1_TPI1.gb\")"
    ]
   },
   {
