--- a/pYPK0_TPI1_CiGXF1_ENO2.ipynb
+++ b/pYPK0_TPI1_CiGXF1_ENO2.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK0 = pydna.read(\"pYPK0.gb\")"
+    "pYPK0 =read(\"pYPK0.gb\")"
    ]
   },
   {
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_TPI1 = pydna.read(\"pYPKa_Z_TPI1.gb\")"
+    "promoter_clone = pYPKa_Z_TPI1 =read(\"pYPKa_Z_TPI1.gb\")"
    ]
   },
   {
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobbb@gmail.com\")\n",
+    "gb =Genbank(\"bjornjobbb@gmail.com\")\n",
     "gene_template = gb.nucleotide(\"AJ937350.1\") # plasmid pGXF1 Leandro et al. 2006"
    ]
   },
@@ -237,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "pf, pr = pydna.parse('''>580_GXF1_YPK_fwd (83-mer)\n",
+    "pf, pr =parse('''>580_GXF1_YPK_fwd (83-mer)\n",
     "                        gtcgaggaacgccaggttgcccactttctcactagtgaAAatgtcacaagattcgcattctt\n",
     "\n",
     "                        >579_GXF1_YPK_rev (83-mer)\n",
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "g = pydna.pcr( pf, pr, orf)"
+    "g =pcr( pf, pr, orf)"
    ]
   },
   {
@@ -290,7 +290,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_ENO2 = pydna.read(\"pYPKa_E_ENO2.gb\")"
+    "terminator_clone = pYPKa_E_ENO2 =read(\"pYPKa_E_ENO2.gb\")"
    ]
   },
   {
@@ -301,8 +301,8 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -346,7 +346,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK0_E_Z, p, g, t), limit=31)"
+    "asm =Assembly((pYPK0_E_Z, p, g, t), limit=31)"
    ]
   },
   {
@@ -524,7 +524,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK0_TPI1_CiGXF1_ENO2.gb\")"
+    "reloaded =read(\"pYPK0_TPI1_CiGXF1_ENO2.gb\")"
    ]
   },
   {
