--- a/pYPK3_RPS19b_HIS3_RPS19a.ipynb
+++ b/pYPK3_RPS19b_HIS3_RPS19a.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPK3 = pydna.read(\"pYPK3.gb\")"
+    "pYPK3 =read(\"pYPK3.gb\")"
    ]
   },
   {
@@ -71,7 +71,7 @@
    },
    "outputs": [],
    "source": [
-    "promoter_clone = pYPKa_Z_RPS19btp = pydna.read(\"pYPKa_Z_RPS19b.gb\")"
+    "promoter_clone = pYPKa_Z_RPS19btp =read(\"pYPKa_Z_RPS19b.gb\")"
    ]
   },
   {
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "gene_clone = pydna.read(\"pYPKa_A_ScHIS3.gb\")"
+    "gene_clone =read(\"pYPKa_A_ScHIS3.gb\")"
    ]
   },
   {
@@ -93,7 +93,7 @@
    },
    "outputs": [],
    "source": [
-    "terminator_clone = pYPKa_E_RPS19atp = pydna.read(\"pYPKa_E_RPS19a.gb\")"
+    "terminator_clone = pYPKa_E_RPS19atp =read(\"pYPKa_E_RPS19a.gb\")"
    ]
   },
   {
@@ -113,9 +113,9 @@
    },
    "outputs": [],
    "source": [
-    "p  = pydna.pcr( p167, p567, promoter_clone)\n",
-    "g  = pydna.pcr( p468, p467, gene_clone)\n",
-    "t  = pydna.pcr( p568, p166, terminator_clone)"
+    "p  =pcr( p167, p567, promoter_clone)\n",
+    "g  =pcr( p468, p467, gene_clone)\n",
+    "t  =pcr( p568, p166, terminator_clone)"
    ]
   },
   {
@@ -159,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "asm = pydna.Assembly((pYPK3_E_N, p, g, t), limit=31)"
+    "asm =Assembly((pYPK3_E_N, p, g, t), limit=31)"
    ]
   },
   {
@@ -283,7 +283,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna"
+    "from pydna.all import *"
    ]
   },
   {
@@ -294,7 +294,7 @@
    },
    "outputs": [],
    "source": [
-    "reloaded = pydna.read(\"pYPK3_RPS19b_HIS3_RPS19a.gb\")"
+    "reloaded =read(\"pYPK3_RPS19b_HIS3_RPS19a.gb\")"
    ]
   },
   {
