--- a/pYPK5.ipynb
+++ b/pYPK5.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# pYPK5\n",
     "\n",
@@ -23,36 +26,41 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "\n",
-    "pYPK0 = pydna.read(\"pYPK0.gb\")\n",
+    "pYPK0 =read(\"pYPK0.gb\")\n",
     "\n",
     "githubuser=\"BjornFJohansson\"\n",
     "gistid = \"c5424b7ebbf553c52053\"\n",
-    "x= pydna.download_text('https://gist.githubusercontent.com/{user}/{gistid}/raw'.format(user=githubuser, gistid=gistid))\n",
-    "pAG32 = pydna.read(x)"
+    "x=download_text('https://gist.githubusercontent.com/{user}/{gistid}/raw'.format(user=githubuser, gistid=gistid))\n",
+    "pAG32 =read(x)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "[pAG32 sequence](https://gist.github.com/BjornFJohansson/c5424b7ebbf553c52053)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "p477, p531, p535, p534= pydna.parse(''' \n",
+    "p477, p531, p535, p534=parse(''' \n",
     ">477_bleMX4r\n",
     "agtggaacgaaaactcacgttaagggattttggtcatgaggagctcgttttcga\n",
     "\n",
@@ -65,22 +73,35 @@
     ">534_pSU0_2u_rev (27-mer)\n",
     "ttatcgatgataagctgtcaaagatga''')\n",
     "\n",
-    "hygmarker = pydna.pcr(p477, p531, pAG32)\n",
+    "hygmarker =pcr(p477, p531, pAG32)\n",
     "\n",
-    "two_micron = pydna.pcr(p534, p535, pYPK0)\n",
+    "two_micron =pcr(p534, p535, pYPK0)\n",
     "\n",
     "from Bio.Restriction import StuI\n",
     "\n",
-    "vect, stuffer = pYPK0.cut(StuI)\n",
-    "\n",
-    "asm=pydna.Assembly([hygmarker, two_micron, vect])"
+    "vect, stuffer = pYPK0.cut(StuI)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "asm=Assembly([hygmarker, two_micron, vect])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -97,7 +118,7 @@
        "Linear products..................: [7804] [6784] [6332] [6218] [6016] [5902] [5096] [3307] [2539] [2425] [1505] [485] [33]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,9 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -119,18 +142,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "assert len(pYPK5) == 6299"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The larger recombination product x 7219 contains the \n",
     "pYPK0 vector two times in a row\n",
-    "the product we want is the y 6299bp\n",
+    "the product we want is the y sequence 6299bp\n",
     "\n",
     "    x:\n",
     "     -|1619bp_PCR_prod|1505\n",
@@ -167,29 +196,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       " -|1619bp_PCR_prod|66\n",
+       " -|1619bp_PCR_prod|1505\n",
        "|                  \\/\n",
        "|                  /\\\n",
-       "|                  66|pYKP0|41\n",
-       "|                           \\/\n",
-       "|                           /\\\n",
-       "|                           41|1721bp_PCR_pr_rc|33\n",
-       "|                                               \\/\n",
-       "|                                               /\\\n",
-       "|                                               33-\n",
-       "|                                                  |\n",
-       " --------------------------------------------------"
+       "|                  1505|pYKP0|41\n",
+       "|                             \\/\n",
+       "|                             /\\\n",
+       "|                             41|1721bp_PCR_pr_rc|33\n",
+       "|                                                 \\/\n",
+       "|                                                 /\\\n",
+       "|                                                 33-\n",
+       "|                                                    |\n",
+       " ----------------------------------------------------"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,9 +231,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -211,9 +244,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bYXaKaxDTMFN5_B-QWoDqATVAb0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pYPK5.cseguid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -222,7 +279,7 @@
        "cSEGUID_bYXaKaxDTMFN5_B-QWoDqATVAb0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,9 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -255,16 +314,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "[DOWNLOAD](pYPK5.gb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -273,14 +337,14 @@
        "cSEGUID_bYXaKaxDTMFN5_B-QWoDqATVAb0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pydna\n",
-    "r = pydna.read(\"pYPK5.gb\")\n",
+    "from pydna.all import *\n",
+    "r =read(\"pYPK5.gb\")\n",
     "r.verify_stamp()"
    ]
   }
