--- a/pYPKa_A_ScHIS3.ipynb
+++ b/pYPKa_A_ScHIS3.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa = pydna.read(\"pYPKa.gb\")"
+    "pYPKa =read(\"pYPKa.gb\")"
    ]
   },
   {
@@ -218,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"myemail@home.se\")"
+    "gb =Genbank(\"myemail@home.se\")"
    ]
   },
   {
@@ -287,13 +287,13 @@
    },
    "outputs": [],
    "source": [
-    "f,r = pydna.parse(\"\"\">572_ScHIS3fwd (27-mer)\n",
+    "f,r =parse(\"\"\">572_ScHIS3fwd (27-mer)\n",
     "                     CGCGCCAAAatgacagagcagaaagcc\n",
     "\n",
     "                     >571_ScHIS3rev (27-mer)\n",
     "                     CCctacataagaacacctttggtggag\"\"\", ds=False)\n",
     "\n",
-    "insert = pydna.pcr(f, r, template)"
+    "insert =pcr(f, r, template)"
    ]
   },
   {
@@ -478,8 +478,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "pYPKa_A_ScHIS3 = pydna.read(\"pYPKa_A_ScHIS3.gb\")\n",
+    "from pydna.all import *\n",
+    "pYPKa_A_ScHIS3 =read(\"pYPKa_A_ScHIS3.gb\")\n",
     "pYPKa_A_ScHIS3.verify_stamp()"
    ]
   },
