--- a/pYPKa_A_ScRPE1.ipynb
+++ b/pYPKa_A_ScRPE1.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa = pydna.read(\"pYPKa.gb\")"
+    "pYPKa =read(\"pYPKa.gb\")"
    ]
   },
   {
@@ -218,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"myemail@home.se\")"
+    "gb =Genbank(\"myemail@home.se\")"
    ]
   },
   {
@@ -287,12 +287,12 @@
    },
    "outputs": [],
    "source": [
-    "f,r = pydna.parse(\"\"\">557_RPE1_YPK_fwd\n",
+    "f,r =parse(\"\"\">557_RPE1_YPK_fwd\n",
     "                      CGCGCCAAAATGGTCAAACCAATTATAGC\n",
     "                     >556_RPE1_YPK_rev\n",
     "                      GGCTAATCTAGCAAATCTCTAG\"\"\", ds=False)\n",
     "\n",
-    "insert = pydna.pcr(f, r, template)"
+    "insert =pcr(f, r, template)"
    ]
   },
   {
@@ -479,8 +479,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "pYPKa_A_ScRPE1 = pydna.read(\"pYPKa_A_ScRPE1.gb\")\n",
+    "from pydna.all import *\n",
+    "pYPKa_A_ScRPE1 =read(\"pYPKa_A_ScRPE1.gb\")\n",
     "pYPKa_A_ScRPE1.verify_stamp()"
    ]
   },
