--- a/pYPKa_E_RPS19b.ipynb
+++ b/pYPKa_E_RPS19b.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa = pydna.read(\"pYPKa.gb\")"
+    "pYPKa =read(\"pYPKa.gb\")"
    ]
   },
   {
@@ -164,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")"
+    "gb =Genbank(\"bjornjobb@gmail.com\")"
    ]
   },
   {
@@ -292,12 +292,12 @@
    },
    "outputs": [],
    "source": [
-    "f,r = pydna.parse(\"\"\">648_ScRPS19btpf2\n",
+    "f,r =parse(\"\"\">648_ScRPS19btpf2\n",
     "                      ttaaatTCTAGTATGGTTTGAAACCT\n",
     "                     >647_ScRPS19btpr_PacI\n",
     "                      taattaaCTTTATTATCTTTGGTTCTAT\"\"\", ds=False)\n",
     "\n",
-    "insert = pydna.pcr(f, r, template)"
+    "insert =pcr(f, r, template)"
    ]
   },
   {
@@ -503,8 +503,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pYPKa_E_RPS19b.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded =read(\"pYPKa_E_RPS19b.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   }
