--- a/pYPKa_Z_PDC1.ipynb
+++ b/pYPKa_Z_PDC1.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa = pydna.read(\"pYPKa.gb\")"
+    "pYPKa =read(\"pYPKa.gb\")"
    ]
   },
   {
@@ -164,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")"
+    "gb =Genbank(\"bjornjobb@gmail.com\")"
    ]
   },
   {
@@ -292,12 +292,12 @@
    },
    "outputs": [],
    "source": [
-    "f,r = pydna.parse(\"\"\">413_ScPDC1tpf\n",
+    "f,r =parse(\"\"\">413_ScPDC1tpf\n",
     "                      TTAAATAAGGGTAGCCTCCCCATA\n",
     "                     >625_ScPDC1tpr_PacI\n",
     "                      taattaaTTTGATTGATTTGACTGTGTTATTTTG\"\"\", ds=False)\n",
     "\n",
-    "insert = pydna.pcr(f, r, template)"
+    "insert =pcr(f, r, template)"
    ]
   },
   {
@@ -503,8 +503,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pYPKa_Z_PDC1.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded =read(\"pYPKa_Z_PDC1.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   },
