--- a/pYPKa_Z_TDH1_rev.ipynb
+++ b/pYPKa_Z_TDH1_rev.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "import pydna\n",
+    "from pydna.all import *\n",
     "from pydna import ipynb_importer"
    ]
   },
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "pYPKa = pydna.read(\"pYPKa.gb\")"
+    "pYPKa =read(\"pYPKa.gb\")"
    ]
   },
   {
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "gb = pydna.Genbank(\"bjornjobb@gmail.com\")"
+    "gb =Genbank(\"bjornjobb@gmail.com\")"
    ]
   },
   {
@@ -279,12 +279,12 @@
     }
    ],
    "source": [
-    "f,r = pydna.parse(\"\"\">547_ScTDH1tpf (27-mer)\n",
+    "f,r =parse(\"\"\">547_ScTDH1tpf (27-mer)\n",
     "                     ttaaatAAAAGCTCGACCTTAAATAAG\n",
     "                     >653_ScTDH1tpr_PacI\n",
     "                     taattaaTTTGTTTTGTGTGTAAATTTAG\"\"\", ds=False)\n",
     "\n",
-    "insert = pydna.pcr(f, r, template)\n",
+    "insert =pcr(f, r, template)\n",
     "insert"
    ]
   },
@@ -482,8 +482,8 @@
     }
    ],
    "source": [
-    "import pydna\n",
-    "reloaded = pydna.read(\"pYPKa_Z_TDH1_rev.gb\")\n",
+    "from pydna.all import *\n",
+    "reloaded =read(\"pYPKa_Z_TDH1_rev.gb\")\n",
     "reloaded.verify_stamp()"
    ]
   }
